@@ -163,4 +163,5 @@ Please send bug reports to  \fIsteffen@wendzel.de\fP.
 
 .SH SEE ALSO
 .BR wendzelnntpd (8)
+.BR wendzelnntpd.conf (5)
 
