@@ -24,7 +24,7 @@ Output version information and exit.
 Administration of newsgroups is performed via 
 .BR wendzelnntpadm (8)
 and the configuration file
-\fIwendzelnntpd.conf\fP.
+.BR wendzelnntpd.conf (5).
 .SH "WEBSITE"
 \fIhttps://www.wendzel.de\fP
 and
@@ -41,4 +41,5 @@ Please send bug reports to  \fIsteffen@wendzel.de\fP.
 
 .SH SEE ALSO
 .BR wendzelnntpadm (8)
+.BR wendzelnntpd.conf (5)
 
