@@ -1,0 +1,218 @@
+.TH WENDZELNNTPD.CONF 5 "29 Sep 2025" ""
+.\"=====================================================================
+.SH "NAME"
+wendzelnntpd.conf \- Configuration file for wendzelnntpd
+.SH "SYNOPSIS"
+.sp
+\fI@confdir@/wendzelnntpd.conf\fP
+.SH "DESCRIPTION"
+This file contains the configuration options for the Usenet server
+.BR wendzelnntpd (8)
+which can be used to change the database backend,
+the network interfaces and ports the server listens on,
+as well as other settings changing the behavior of the server.
+
+.SS Database settings
+.PP
+\fBdatabase-engine\fR database-engine
+.RS 4
+Specify a database engine. Currently supported are 'sqlite3'
+and 'mysql' as well as experimental support for 'postgres'.
+.RE
+.PP
+\fBdatabase-server\fR hostname
+.RS 4
+Your database hostname (not used in case of sqlite3).
+.RE
+.PP
+\fBdatabase-port\fR port
+.RS 4
+The database connection port (not used in case of sqlite3).
+.RE
+.PP
+\fBdatabase-username\fR username
+.RS 4
+Username for authentication with the database (not required for sqlite3).
+.RE
+.PP
+\fBdatabase-password\fR password
+.RS 4
+Password for authentication with the database (not required for sqlite3).
+.RE
+.PP
+\fBmessage-body-in-db\fR
+.RS 4
+Store the Message Body in the database (only possible with postgres!).
+This setting should NOT be changed after initial utilization
+of the server as old message bodies would not be locatable anymore!
+.RE
+.PP
+\fBmessage-count-in-db\fR
+.RS 4
+Store/load the unique message index within the database
+system. (Only possible with postgres!)
+This should NOT be changed after initial utilization of
+the server as the message counter would be corrupted otherwise!
+.RE
+.PP
+
+.SS Network settings
+\fIwendzelnntpd\fR can listen on multiple interfaces and ports with
+different configurations simultaniously. The configuration needs to
+specify one connector per interface and port. Each connector block
+starts with '<connector>' and ends with '</connector>' and can contain
+the following options.
+Certificates for TLS can be created with
+.BR create_certificate (8).
+.PP
+\fBport\fR port
+.RS 4
+The port number that the server will listen on.
+.RE
+.PP
+\fBlisten\fR address
+.RS 4
+The ip address that the server will listen on.
+.RE
+.PP
+\fBenable-starttls\fR
+.RS 4
+Enables STARTTLS for this port.
+.RE
+.PP
+\fBenable-tls\fR
+.RS 4
+Enables TLS for this port.
+.RE
+.PP
+\fBtls-server-certificate\fR /path/to/tls/server-certificate.crt
+.RS 4
+Configure SSL server certificate.
+.RE
+.PP
+\fBtls-server-key\fR /path/to/tls/server-certificate.key
+.RS 4
+Configure SSL private key.
+.RE
+.PP
+\fBtls-ca-certificate\fR /path/to/tls/ca-certificate.crt
+.RS 4
+Configure SSL CA certificate.
+.RE
+.PP
+\fBtls-cipher-suites\fR cipher-suites
+.RS 4
+Configure TLS ciphers for TLSv1.3.
+.RE
+.PP
+\fBtls-ciphers\fR ciphers
+.RS 4
+Configure TLS ciphers for TLSv1.1 and TLSv1.2.
+.RE
+.PP
+\fBtls-versions\fR versionrange
+.RS 4
+Configure allowed TLS versions e.g. "1.2-1.3".
+.RE
+.PP
+\fBtls-verify-client\fR mode
+.RS 4
+Enables mutual authentication over TLS (mTLS).
+Allowed values: require, optional and none
+.RE
+.PP
+\fBtls-verify-client-depth\fR depth
+.RS 4
+Depth of the validation of the certificate chain.
+Use 0 to allow self signed certificates.
+.RE
+.PP
+\fBtls-crl\fR mode
+.RS 4
+Enables verification of client certificates against CRLs for mTLS.
+Allowed values: chain, leaf and none
+.RE
+.PP
+\fBtls-crl-file\fR /path/to/ssl.crl
+.RS 4
+Path to the certificate revocation list.
+.RE
+.PP
+
+.SS Security settings
+.PP
+\fBuse-authentication\fR
+.RS 4
+Activate authentication.
+.RE
+.PP
+\fBuse-acl\fR
+.RS 4
+If you activated authentication (see config option
+`use-authentication'), you can also activate the support for
+access control lists (ACL).
+.RE
+.PP
+\fBenable-anonym-mids\fR
+.RS 4
+This keyword prevents that IPs or hostnames will become part of
+the message ID generated by WendzelNNTPd.
+.RE
+.PP
+\fBhash-salt\fR salt
+.RS 4
+This keyword defines a salt to be used in conjunction with the
+passwords to calculate the cryptographic hashes. The salt must
+be in the form [a-zA-Z0-9.:\/-_]+.
+Please note that the final hash is calculated using
+salt+username+password as an input to prevent simple
+password-identification attacks when an equal password is used
+by >=2 users.
+ATTENTION: If you change the salt after passwords have been
+stored, they will be rendered invalid! If you comment out
+hash-salt, then the default hash salt defined in the source
+code will be used.
+You should change the default hash-salt value before first use!
+.RE
+.PP
+\fBtls-is-mandatory\fR
+.RS 4
+Make TLS mandatory for all connectors.
+.RE
+.PP
+
+.SS Miscellaneous settings
+.PP
+\fBverbose-mode\fR
+.RS 4
+Use 'verbose-mode' if you want to find errors or if you
+have problems with the logging subsystem. All log strings are
+written to STDERR, too, if verbose-mode is activated.
+Additionally all commands sent by clients are written to STDERR
+(but not to the logfile).
+.RE
+.PP
+\fBmax-size-of-postings\fR size
+.RS 4
+The max. allowed size of a single posting (in bytes).
+.RE
+.PP
+
+.SH "WEBSITE"
+\fIhttps://www.wendzel.de\fP
+and
+\fIhttps://cdpxe.github.io/WendzelNNTPd/\fP
+
+.SH "AUTHORS"
+WendzelNNTPd was originally developed by Steffen Wendzel. The development started in 2004. See the
+.I
+AUTHORS
+file for a list of all major contributors.
+
+.SH "BUGS"
+Please send bug reports to  \fIsteffen@wendzel.de\fP.
+
+.SH SEE ALSO
+.BR wendzelnntpd (8)
+.BR wendzelnntpadm (8)
+.BR create_certificate (8)
