@@ -158,6 +158,7 @@ MISC:
  - Add systemd service unit for wendzelnntpd (thanks to @oleludwig)
  - Change installation paths for usenet.db_struct and mysql_db_struct.sql
    from /usr/local/share/docs to /usr/local/share/wendzelnntpd
+ - Add man pages for create_certificate and wendzelnntpd.conf
 
 2.1.3-stable "Friedrichroda" : 17-Apr-2021:
  As usual, every new release gets named after a nice travel location.
